name:                pascal-compiler
version:             0.1.0.0
synopsis:            Toy compiler for a subset of the Pascal language.
-- description:
homepage:            https://github.com/skeet70/pascal-compiler
license:             BSD3
license-file:        LICENSE
author:              Murph Murphy, James Sonntag, Tyler Huffman
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IntermediateCode.IRFunctions
                       , IntermediateCode.IRHelpers
                       , Parser.Helper
                       , Parser.ParsingData
                       , Parser.ParsingFunctions
                       , Scanner.DigitFSA
                       , Scanner.Dispatcher
                       , Scanner.LetterFSA
                       , Scanner.ScannerData
                       , Scanner.TokenTable
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010

executable pascal-compiler
  main-is:             mp.hs
  hs-source-dirs:      exe
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                       , pascal-compiler
                       , directory
  default-language:    Haskell2010
